--- a/modules/twitter/package.json
+++ b/modules/twitter/package.json
@@ -4,7 +4,8 @@
   "description": "Twitter module",
   "main": "index.js",
   "dependencies": {
-    "twit": "latest"
+    "twit": "latest",
+    "ent": "latest"
   },
   "author": "EuanK",
   "license": "MIT"
