--- a/modules/isup/package.json
+++ b/modules/isup/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "uri-js": "^1.4.2",
-    "follow-redirects": "0.0.3"
+    "follow-redirects": "0.0.3",
+    "request": "^2.34.0"
   }
 }
