--- a/modules/blerg/package.json
+++ b/modules/blerg/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "blerg": "0.0.1"
+    "blerg": "0.0.2",
+    "parse-numeric-range": "0.0.1"
   }
 }
