--- a/config.example.json
+++ b/config.example.json
@@ -7,6 +7,7 @@
   "commandPrefix": "!",
   "ssl": false,
   "port": 6667,
+  "timeout": 256,
   "debug": false,
   "mainChannel": "#seubot",
   "channels": "#seubot",
