Add server password option

--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,7 @@
 {
   "nick": "suebot",
   "userName": "seubot",
+  "password": null,
   "realName": "seubot",
   "server": "irc.freenode.net",
   "owner": "owner",
