--- a/modules/google/package.json
+++ b/modules/google/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "dependencies": {
     "google": "git+https://github.com/euank/node-google.git",
+    "google-images": "^0.1.0",
     "humanize": "0.0.9"
   },
   "main": "index.js",
