Update to using youtube v3 api
Whatever we were using before got deprecated and we kept getting device
support errors

--- a/modules/youtube/package.json
+++ b/modules/youtube/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "description": "",
   "dependencies": {
-    "youtube-feeds": "git+https://github.com/fvdm/nodejs-youtube.git"
+    "googleapis": "^2.0.2",
+    "moment": "^2.10.2"
   },
   "main": "index.js",
   "author": "",
