Update roll module; pin semver
Not pinning the package was a bad idea in the first place. Who would
have thought that a dice rolling module would undergo api changes, huh?

--- a/modules/roll/package.json
+++ b/modules/roll/package.json
@@ -4,7 +4,7 @@
   "description": "Roll module",
   "main": "index.js",
   "dependencies": {
-    "roll": "latest"
+    "roll": "^1.1.0"
   },
   "author": "EuanK",
   "license": "MIT"
