--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bot.js",
   "dependencies": {
     "async": "latest",
-    "irc": "^0.3.7",
+    "irc": "git+https://github.com/LinuxMercedes/node-irc.git#bleeding",
     "underscore": "latest"
   },
   "devDependencies": {},
