--- a/modules/twitter/package.json
+++ b/modules/twitter/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "twit": "latest",
-    "ent": "latest"
+    "ent": "latest",
+    "request": "latest"
   },
   "author": "EuanK",
   "license": "MIT"
