Revert "Merge pull request #91 from LinuxMercedes/powertweet"
This reverts commit fdb443b62b479ef70f9d6a5d760f57bf75c8e987, reversing
changes made to f1b77f1d714252f609330e495ecf9137c106c6ed.

--- a/modules/twitter/package.json
+++ b/modules/twitter/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "twit": "latest",
-    "ent": "latest",
-    "request": "latest"
+    "ent": "latest"
   },
   "author": "EuanK",
   "license": "MIT"
