wiki searching now works for single words.

--- a/modules/wiki/package.json
+++ b/modules/wiki/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "request": "latest",
-    "jsdom": "3.x"
+    "jsdom": "3.x",
+    "tough-cookie": "latest"
   },
   "author": "brhoades",
   "license": "MIT"
