Moved to git repo for stock module. Fixes :

--- a/modules/stocks/package.json
+++ b/modules/stocks/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "dependencies": {
-    "stockscraper": "latest"
+    "stockscraper": "git://github.com/brhoades/stockscraper#master"
   },
   "main": "index.js",
   "author": "",
