Switched onmath to mathjs... going to test it live.

--- a/modules/onMath/package.json
+++ b/modules/onMath/package.json
@@ -4,7 +4,8 @@
   "description": "Math module",
   "main": "index.js",
   "dependencies": {
-    "regex-chain": "latest"
+    "regex-chain": "latest",
+    "mathjs": "latest"
   },
   "author": "EuanK",
   "license": "MIT"
