Added method of printing scheduled commands.

--- a/modules/schedule/package.json
+++ b/modules/schedule/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "later": "latest"
+    "later": "latest",
+    "json-hash": "latest"
   },
   "author": "brodes",
   "license": "MIT"
