--- a/modules/reddit/package.json
+++ b/modules/reddit/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "dependencies": {
+    "request": "^2.65.0",
     "string": "~1.8.0"
   },
   "main": "index.js",
