Schedule can now rate check / disallow commands.
Also switched from Date to moments, which allow easier formatting and
differences.

--- a/modules/schedule/package.json
+++ b/modules/schedule/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "later": "latest",
-    "json-hash": "latest"
+    "json-hash": "latest",
+    "moment": "latest"
   },
   "author": "brodes",
   "license": "MIT"
