Added minimumInterval, separated minimumCreationDelay.
MinimumInterval is currently the time difference between the 3rd and
2nd next calls.
Also now printing when next call will be on creation.
Default minimum interval is 60 seconds.

--- a/modules/schedule/package.json
+++ b/modules/schedule/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "later": "latest",
     "json-hash": "latest",
-    "moment": "latest"
+    "moment": "latest",
+    "moment-duration-format": "latest"
   },
   "author": "brodes",
   "license": "MIT"
