Now using sugarjs for parsing relative times (!remind)

--- a/modules/schedule/package.json
+++ b/modules/schedule/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "later": "latest",
     "moment": "latest",
-    "moment-duration-format": "latest"
+    "moment-duration-format": "latest",
+    "sugar": "latest"
   },
   "author": "brodes",
   "license": "MIT"
