--- a/modules/wolf/package.json
+++ b/modules/wolf/package.json
@@ -4,7 +4,7 @@
   "description": "Wolfram Alpha module",
   "main": "index.js",
   "dependencies": {
-    "wolfram": "^0.3.0"
+    "wolfram-alpha": "^0.5.0"
   },
   "author": "EuanK",
   "license": "MIT"
