*: update to yarn
The future includes more lockfiles

As a side effect, this also sorted all the imports in package.json

I also improved installModules.sh a little bit

--- a/modules/onMath/package.json
+++ b/modules/onMath/package.json
@@ -4,8 +4,8 @@
   "description": "Math module",
   "main": "index.js",
   "dependencies": {
-    "regex-chain": "latest",
-    "mathjs": "latest"
+    "mathjs": "latest",
+    "regex-chain": "latest"
   },
   "author": "EuanK",
   "license": "MIT"
