--- a/modules/que/package.json
+++ b/modules/que/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.1",
   "description": "What'd they say?",
   "main": "index.js",
-  "dependencies": {
-  },
+  "dependencies": {},
   "author": "drusepth",
   "license": "MIT"
 }
