--- a/modules/hn/package.json
+++ b/modules/hn/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.0",
   "description": "",
   "dependencies": {
-    "hacker-news-api":
-      "git+https://github.com/christianbundy/node-hacker-news-api#65a9c5110ddbbcd5579a514902562a8fd44cf3eb",
     "ent": "^2.0.0",
+    "hacker-news-api": "git+https://github.com/christianbundy/node-hacker-news-api#65a9c5110ddbbcd5579a514902562a8fd44cf3eb",
     "string": "^1.8.1"
   },
   "main": "index.js",
