--- a/modules/isup/package.json
+++ b/modules/isup/package.json
@@ -9,8 +9,8 @@
   "author": "EuanK",
   "license": "ISC",
   "dependencies": {
-    "uri-js": "^1.4.2",
     "follow-redirects": "0.0.3",
-    "request": "^2.34.0"
+    "request": "^2.34.0",
+    "uri-js": "^1.4.2"
   }
 }
