--- a/modules/quo/package.json
+++ b/modules/quo/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "description": "quo meta-module",
   "main": "index.js",
-  "dependencies": {
-  },
+  "dependencies": {},
   "author": "EuanK",
   "license": "MIT"
 }
