--- a/modules/scrollback/package.json
+++ b/modules/scrollback/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "dependencies": {
     "async": "^0.9.0",
-    "underscore": "^1.6.0",
-    "parse-numeric-range": "0.0.1"
+    "parse-numeric-range": "0.0.1",
+    "underscore": "^1.6.0"
   },
   "main": "index.js",
   "author": "Euank",
