--- a/modules/weather/package.json
+++ b/modules/weather/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "description": "Weather Underground module",
   "main": "index.js",
-  "dependencies": {
-  },
+  "dependencies": {},
   "author": "gmackie",
   "license": "MIT"
 }
