deps: add dependency on bunyan :deciduous_tree:

--- a/config.example.json
+++ b/config.example.json
@@ -5,6 +5,7 @@
   "realName": "seubot",
   "server": "irc.freenode.net",
   "owner": "owner",
+  "logLevel": "info",
   "commandPrefix": "!",
   "ssl": false,
   "port": 6667,
