modules: add testlog module
disabled by default since it allows injecting errors basically

--- a/config.example.json
+++ b/config.example.json
@@ -19,7 +19,7 @@
   "channelPrefixes": "&#",
   "messageSplit": 512,
   "moduleFolders": ["modules"],
-  "disabledModules": ["github"],
+  "disabledModules": ["github", "testlog"],
   "datafolder": "data",
   "tmpfolder": "tmp",
   "configfolder": "conf"
