--- a/modules/btc/package.json
+++ b/modules/btc/package.json
@@ -4,7 +4,8 @@
   "description": "Bitcoin module",
   "main": "index.js",
   "dependencies": {
-    "btce": "latest"
+    "coinmarketcap": "https://github.com/LinuxMercedes/coinmarketcap.git#deps",
+    "lodash": "latest"
   },
   "author": "EuanK",
   "license": "MIT"
