--- a/modules/btc/package.json
+++ b/modules/btc/package.json
@@ -4,7 +4,7 @@
   "description": "Bitcoin module",
   "main": "index.js",
   "dependencies": {
-    "coinmarketcap": "https://github.com/LinuxMercedes/coinmarketcap.git#deps",
+    "@linuxmercedes/coinmarketcap": "latest",
     "lodash": "latest"
   },
   "author": "EuanK",
