--- a/modules/btc/package.json
+++ b/modules/btc/package.json
@@ -4,8 +4,7 @@
   "description": "Bitcoin module",
   "main": "index.js",
   "dependencies": {
-    "@linuxmercedes/coinmarketcap": "latest",
-    "lodash": "latest"
+    "@linuxmercedes/coinmarketcap": "latest"
   },
   "author": "EuanK",
   "license": "MIT"
