--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "async": "latest",
+    "body-parser": "^1.18.2",
     "bunyan": "^1.8.10",
     "change-case": "^2.3.0",
+    "express": "^4.16.2",
     "heapdump": "latest",
     "irc": "^0.5.1",
     "snailescape.js": "^2.0.1",
