--- a/modules/roll/package.json
+++ b/modules/roll/package.json
@@ -7,5 +7,8 @@
     "roll": "^1.1.0"
   },
   "author": "EuanK",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^4.1.2"
+  }
 }
