--- a/modules/google/package.json
+++ b/modules/google/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "google": "git+https://github.com/euank/node-google.git",
     "google-images": "^1.0.0",
+    "googleapis": "^40.0.0",
     "humanize": "0.0.9"
   },
   "main": "index.js",
