modules/google: switch over to a different google api
The CSE results are frankly awful, and we're low-volume /
non-commercial, so I feel okay about using something that scrapes google
results again.

Hopefully this one works well.

Also, drop goognum since it's not trivial to implement anymore.

--- a/modules/google/package.json
+++ b/modules/google/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "description": "",
   "dependencies": {
-    "google": "git+https://github.com/euank/node-google.git",
     "google-images": "^1.0.0",
+    "google-it": "^1.5.4",
     "googleapis": "^40.0.0",
     "humanize": "0.0.9"
   },
