--- a/modules/urbandictionary/package.json
+++ b/modules/urbandictionary/package.json
@@ -4,7 +4,7 @@
   "description": "UrbanDictionary module",
   "main": "index.js",
   "dependencies": {
-    "urban": "git+https://github.com/euank/urban.git"
+    "urban-dictionary": "^3.0.2"
   },
   "author": "LinuxMercedes",
   "license": "MIT"
