--- a/modules/wolf/package.json
+++ b/modules/wolf/package.json
@@ -4,7 +4,7 @@
   "description": "Wolfram Alpha module",
   "main": "index.js",
   "dependencies": {
-    "wolfram-alpha": "^0.5.0"
+    "wolfram-alpha": "git+https://github.com/katou01/wolfram-alpha#4696e150e474cbb7fea982b0136f240b8b51848c"
   },
   "author": "EuanK",
   "license": "MIT"
